// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/api/timeOffs DELETE / /:timeOffId - delete a time off 1`] = `
Object {
  "entities": Object {},
}
`;

exports[`/api/timeOffs GET / get all practitioner time offs 1`] = `
Object {
  "entities": Object {
    "timeOffs": Object {
      "46344262-9039-47fa-a4e6-d762dcc57308": Object {
        "allDay": true,
        "endDate": "2017-07-19T00:17:30.932Z",
        "id": "46344262-9039-47fa-a4e6-d762dcc57308",
        "practitionerId": "497ff59a-4bae-4013-bdce-b6b5be91a1f5",
        "startDate": "2017-07-19T00:16:30.932Z",
      },
    },
  },
  "result": Array [
    "46344262-9039-47fa-a4e6-d762dcc57308",
  ],
}
`;

exports[`/api/timeOffs POST / create time off 1`] = `
Object {
  "entities": Object {
    "timeOffs": Object {
      "46344262-9039-47fa-a4e6-d762dcc57308": Object {
        "allDay": true,
        "endDate": "2017-07-19T00:17:30.932Z",
        "id": "46344262-9039-47fa-a4e6-d762dcc57308",
        "practitionerId": "497ff59a-4bae-4013-bdce-b6b5be91a1f5",
        "startDate": "2017-07-19T00:16:30.932Z",
      },
    },
  },
  "result": "46344262-9039-47fa-a4e6-d762dcc57308",
}
`;

exports[`/api/timeOffs PUT / /:timeOffId - update a time off 1`] = `
Object {
  "entities": Object {
    "timeOffs": Object {
      "46344262-9039-47fa-a4e6-d762dcc57308": Object {
        "allDay": true,
        "endDate": "2017-07-19T00:18:30.932Z",
        "id": "46344262-9039-47fa-a4e6-d762dcc57308",
        "practitionerId": "497ff59a-4bae-4013-bdce-b6b5be91a1f5",
        "startDate": "2017-07-19T00:16:30.932Z",
      },
    },
  },
  "result": "46344262-9039-47fa-a4e6-d762dcc57308",
}
`;
